Added system properties in README